--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 
 /* Footer Styles */
 .site-footer {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     padding: 3rem 0;
     margin-top: 3rem;
 }
