--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ body {
 
 .category-sidebar .list-group-item {
     border: none;
-    padding: 2rem 1.5rem;
+    padding-block: 2rem;
     color: var(--text-color);
     transition: all 0.3s ease;
     background: transparent;
